辞書永続化

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,7 @@ services:
   mecab:
     build: .
     volumes:
-      - ./dic:/usr/local/lib/mecab/dic
+      - dic:/usr/local/lib/mecab/dic
+  
+volumes:
+  dic:
