--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,11 +1,12 @@
 FROM alpine
 
-RUN apk add alpine-sdk php7-dev bash php-fpm nginx && \
+RUN apk add --no-cache alpine-sdk php7-dev bash php-fpm nginx && \
     cd /tmp && wget https://github.com/taku910/mecab/archive/master.zip && unzip master.zip && \
     cd mecab-master/mecab && ./configure && make && make check && make install && \
-    cd ../mecab-ipadic && ./configure && make && make install && \
-    cd /root && wget https://github.com/neologd/mecab-ipadic-neologd/archive/v0.0.7.zip && unzip v0.0.7.zip && \
-    rm -f v0.0.7.zip && cd mecab-ipadic-neologd-0.0.7 && ./bin/install-mecab-ipadic-neologd -n -a -y && \
+    cd ../mecab-ipadic && ./configure --with-charset=utf8 && make && make install && \
+    cd /root && git clone --depth 1 https://github.com/neologd/mecab-ipadic-neologd.git && \
+    cd mecab-ipadic-neologd && ./bin/install-mecab-ipadic-neologd -n -a -y && \
+    echo "dicdir = /usr/local/lib/mecab/dic/mecab-ipadic-neologd" > /usr/local/etc/mecabrc && \
     cd /tmp && wget https://github.com/rsky/php-mecab/archive/v0.6.0.zip && unzip v0.6.0.zip && \
     cd php-mecab-0.6.0/mecab && phpize && ./configure && make && make test && make install && \
     rm -rf /tmp/* && echo "extension=mecab.so" > /etc/php7/conf.d/mecab.ini && \
