実用性向上

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -9,5 +9,6 @@ RUN apk add --no-cache alpine-sdk bash py-pip && \
     echo "dicdir = /usr/local/lib/mecab/dic/mecab-ipadic-neologd" > /usr/local/etc/mecabrc && \
     pip install mecab-python3
 VOLUME /usr/local/lib/mecab/dic
+WORKDIR /usr/src/app
 
 CMD [ "python" ]
